--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@
 
 .DS_Store
 
+*.o
+
 !steps/step10/Garage/garage-solution
 
 !steps/step10/Garage/garage-solution64
 
 !steps/step10/Garage/Makefile
+
+!steps/step12/hanoi/Makefile
